[package]
name = "tenx_test"
version = "0.1.0"
authors = ["Joshua Tan <joshktan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
petgraph = "0.4.13"
matrix = "0.22.0"
rust_decimal = "1.0.3"
rust_decimal_macros = "1.0.3"